--- a/templates/home.html
+++ b/templates/home.html
@@ -29,6 +29,7 @@
   <div class="row">
       {% for cat in cats%}
       <div class="col-sm-4">
+        <a href=
         <div class="card">
             <div class="card">
                 <img class="card-img-top" src="{{url_for('static', filename='images/cat1.jpg')}}">
