--- a/templates/cat.html
+++ b/templates/cat.html
@@ -4,5 +4,7 @@
 		</title>
 </head>
 <body>
+	<h1>Some Details:</h1>
 	<a href="cats/{{cat.id}}" class="btn btn-primary">Vote</a>
-	<h1>
+	</body>
+	</html>
